# uQCme

./: .gitignore  CHANGELOG.md  MANIFEST.in  PLAN.md  README.md  app.py  config.yaml  pixi.toml  plot.py  pyproject.toml  qc_results.tsv  qc_warnings.tsv  recipe.yaml  requirements.txt  setup.py  uQCme.py
.github/workflows/: publish-conda.yml  publish.yml  tests.yml
conda/: meta.yaml
input/: mapping.yaml
input/example/: QC_rules.tsv  QC_tests.tsv  example_run_data.tsv  mapping.yaml  run_data.tsv
output/example/: uQCme_run_data.tsv
src/uQCme/: __init__.py  app.py  cli.py  plot.py  utils.py
src/uQCme/app/: __init__.py  main.py  plot.py  report_export.py
src/uQCme/cli/: __init__.py  main.py
src/uQCme/core/: __init__.py  config.py  engine.py  exceptions.py  loader.py  logging.py  schemas.py
src/uQCme/defaults/: QC_rules.tsv  QC_tests.tsv  config.yaml  mapping.yaml
tests/: README.md  __init__.py  conftest.py  run_tests.py  uQCme_example_run_data.tsv
tests/data/: QC_rules.tsv  QC_tests.tsv  example_run_data.tsv  mapping.yaml
tests/fixtures/: config_example.yaml
tests/integration/: __init__.py  test_uQCme_outcomes.py
tests/unit/: __init__.py  test_config.py  test_dashboard.py  test_qc_processor.py
